--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,9 @@
       <h2>Items</h2>
       <ul class="list-group mb-4">
         <!-- List the todo items here -->
+        Pick up Groceries
+        Run Errands
+        School Run
       </ul>
     </div>
   </div>
