--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 
 {% block content %}
   <div class="jumbotron">
-    <h1 class="display-4">To-Do App</h1>
-    <p class="lead">Just another to-do app.</p>
+    <h1 class="display-4">Dave's To-Do App</h1>
+    <p class="lead">Dave's new to-do list</p>
   </div>
 
   <div class="row">
@@ -25,10 +25,6 @@
                 <button class="btn btn-primary" type="submit">submit todo</button>
             </div>
         </form>
-        
-        Pick up Groceries
-        Run Errands
-        School Run
       </ul>
     </div>
   </div>
