--- a/templates/index.html
+++ b/templates/index.html
@@ -9,22 +9,21 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h2>Items</h2>
+      <h2>Add new items</h2>
+      <form method="post" action="/additem">
+        <input type="text" name="newitem"/>
+        <button class="btn btn-primary" type="submit">Add Item</button>
+      </form>
+      <br />
       <ul class="list-group mb-4">
-          {% for todo in todos %}
-            {{todo.id}} - {{todo.title}}
-            <br>
+        <table>
+          <tr><th>Title</th><th>Status</th></tr>
+          {% for item in items %}
+          <tr><td>{{ item.name }}</td><td>{{ item.status }}</td><td><form method="post" action="/completeitem" name="itemid">
+            <button class="btn btn-primary" type="submit">Complete Status</button>
+            <input type = "hidden" value="{{ item.id }}" name="itemid"></form></td></tr>
           {% endfor %}
-
-        <form action="/add-todo" method="post">
-            <div class="form-example">
-              <label for="name">Enter your todo name: </label>
-              <input type="text" name="name" id="name" required>
-            </div>
-            <div class="form-example">
-                <button class="btn btn-primary" type="submit">submit todo</button>
-            </div>
-        </form>
+        </table>
       </ul>
     </div>
   </div>
